--- a/courses.html
+++ b/courses.html
@@ -61,7 +61,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Harsh Rathi</p>        </div>
+            <p>&copy; 2024 Harsh Rathi</p>       
+        </div>
     </footer>
 
     <script src="script.js"></script>
